# free-job-agent

./: .env.local.example  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  AGENTS.md  LICENSE  MASTER_PROMPT.md  README.md  eslint.config.mjs  job-agent.ps1  launch.bat  launch.ps1  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt  sync-obsidian.bat
.github/workflows/: ci.yml
docs/: AI-TOOLING.md  FULL_AUTO_CONTRACT.md  HEALTH-REPORT.md  SECURITY-AUDIT.md  architecture.md  france_market.md  france_travail_endpoints.example.json  free_sources.md  merge_notes.md
examples/: candidate_profile.json  master_cv.json  master_qa_profile.json
scripts/: auto_apply.py  autorun.ps1  check_file_size.py  chrome_apply_session.py  killgate_watch.py  launch_app.ps1  launch_web.py  preflight.py  preview_cv.py  smoke_test.py
skills/free-job-agent/: SKILL.md
src/: requests.py
src/click/: __init__.py  testing.py
src/job_agent/: __init__.py  agent_core.py  ai_agent.py  ai_agent_classify.py  ai_agent_fit.py  ai_agent_letters.py  ai_agent_search.py  analytics.py  analytics_metrics.py  apply_bridge.py  auto_apply.py  autopilot.py  autopilot_config.py  autopilot_cycle.py  autopilot_packets.py  autopilot_queries.py  autopilot_sources.py  coach.py  coach_catalog.py  coach_interview.py  coach_market.py  coach_skills.py  coach_suggestions.py  config.py  conversion.py  conversion_followups.py  conversion_learning.py  cover_letter_gate.py  cv_studio.py  cv_studio_assets.py  cv_studio_ats.py  cv_studio_core.py  cv_studio_defensibility.py  cv_studio_draft.py  cv_studio_fit.py  cv_studio_projects.py  cv_studio_scan.py  cv_studio_sections.py  cv_studio_suggest.py  cv_template.py  (+54 more)
src/job_agent/_vendor/: __init__.py  requests.py
src/job_agent/auto_apply/: __init__.py  ats_profiles.py  browseruse_backend.py  detect.py  driver.py  driver_browser.py  driver_fields.py  driver_fill.py  eligibility.py  session.py  session_actions.py  session_control.py  session_runner.py  session_types.py
src/job_agent/career/: __init__.py  cert_track.py  gap_coach.py  gap_simulation.py  project_audit.py  project_rules.py  project_specs.py
src/job_agent/cli/: __init__.py  main.py
src/job_agent/cli/commands/: __init__.py  _common.py  apply.py  career.py  feedback.py  france.py  jobs.py  outreach.py  profile.py  search.py  system.py
src/job_agent/data/: certifications.json  eu_sources.json
src/job_agent/db/: __init__.py  activity.py  database.py  database_boards.py  database_conversion.py  database_embeddings.py  database_feedback.py  database_jobs.py  database_meta.py  database_packets.py  database_schema.py  database_stories.py
src/job_agent/exporters/: __init__.py  internship_workbook.py  internship_workbook_values.py  obsidian.py  workbook_preserve.py
src/job_agent/generator/: __init__.py  application_brief.py  ats_gap.py  ats_selfcheck.py  company_extract.py  cover_letter.py  cv.py  evaluation.py  evidence_map.py  followup_email.py  interview_prep.py  linkedin_message.py  outreach_email.py  outreach_guard.py  outreach_llm.py  preflight.py  proof_pack.py  qa.py  reverse_jd.py  star_bank.py
src/job_agent/intake/: __init__.py  api_cache.py  bulk_add.py  crawl4ai_intake.py  discover.py  discovery.py  eu_sources.py  fetch_layer.py  file.py  france_market.py  france_market_boards.py  france_market_queries.py  france_market_xray.py  france_travail_auth.py  france_travail_client.py  france_travail_endpoints.py  free_apis.py  internships.py  markitdown_intake.py  paste.py  profile_import.py  profile_import_linkedin.py  rss.py  url.py
src/job_agent/intake/sources/: __init__.py  arbeitnow.py  ashby.py  base.py  francetravail.py  greenhouse.py  himalayas.py  jobicy.py  labonnealternance.py  lever.py  personio.py  recruitee.py  registry.py  remoteok.py  remotive.py  smartrecruiters.py  themuse.py  workable.py
src/job_agent/pipeline/: __init__.py  artifacts.py  intake_ops.py  packet.py
src/job_agent/renderer/: __init__.py  assistant_render.py  html_render.py  latex_assets.py  latex_compile.py  latex_helpers.py  latex_render.py  latex_source_edit.py  latex_tailor.py  latex_text.py  markdown_render.py  pdf_render.py
src/job_agent/schemas/: __init__.py  candidate.py  job.py  packet.py  scoring.py
src/job_agent/ui/: __init__.py  route_helpers.py  security.py  server.py  services.py
src/job_agent/ui/routes/: __init__.py  boards.py  feature_surfaces.py  get_activity.py  get_career.py  get_core.py  get_filtered_out.py  get_graph.py  get_metrics.py  get_pipeline.py  get_portfolio.py  get_referral.py  get_skill_tree.py  post_ai.py  post_autopilot.py  post_cover_letter.py  post_cv_studio.py  post_feedback.py  post_filtered_out.py  post_generate.py  post_pipeline.py  post_portfolio.py  post_preflight.py  post_referral.py  post_score_explain.py  post_search.py  profile_facts.py  registry.py  stories.py
src/job_agent/utils/: fuzzy.py  html.py  net.py
tests/: conftest.py  test_activity_api.py  test_agent_core.py  test_ai_agent.py  test_ai_trace.py  test_analytics.py  test_application_brief.py  test_apply_bridge.py  test_ats_gap.py  test_ats_selfcheck.py  test_auto_apply.py  test_auto_apply_ats_profiles.py  test_auto_apply_confirm.py  test_auto_apply_detect.py  test_auto_apply_driver.py  test_auto_apply_fullauto.py  test_auto_tracker_export.py  test_autopilot.py  test_browseruse_backend.py  test_bugfix_regressions.py  test_bulk_add.py  test_career_routes.py  test_cert_track.py  test_chrome_session.py  test_cli.py  test_cli_commands.py  test_cli_commands_round2.py  test_coach_plan.py  test_config.py  test_config_resolved_db_path.py  test_contract_and_letter_fixes.py  test_conversion.py  test_conversion_deep.py  test_cover_letter_gating.py  test_cover_letter_route.py  test_crawl4ai_intake.py  test_cv_studio_assets_projects.py  test_cv_studio_core.py  test_cv_studio_defensibility.py  test_cv_studio_key_projects.py  (+135 more)
tests/e2e/: conftest.py  dashboard.spec.js  new_features.spec.js  test_dashboard.py  test_tab_console_smoke.py
(+37 files in other folders)
