[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "free-job-agent"
version = "0.3.0"
description = "France/Paris data-AI focused local job-search and application assistant"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=1.10",
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "rapidfuzz>=3.0",
    "reportlab>=4.0",
    "feedparser>=6.0",
    "python-dateutil>=2.8",
    "jinja2>=3.1",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
ui = ["streamlit>=1.28"]
ollama = ["httpx>=0.25"]
markitdown = ["markitdown>=0.1.5"]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]
full = ["streamlit>=1.28", "httpx>=0.25", "markitdown>=0.1.5"]

[project.scripts]
job-agent = "job_agent.cli.main:app"
job-agent-web = "job_agent.ui.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["job_agent*"]

[tool.setuptools.package-data]
"job_agent.ui" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
