[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "free-job-agent"
version = "0.3.0"
description = "France/Paris data-AI focused local job-search and application assistant"
requires-python = ">=3.11"
dependencies = [
    # Upper bounds keep builds reproducible and stop a vulnerable/breaking major
    # from being pulled silently. pydantic is pinned to v2 (code imports pydantic.v1).
    "pydantic>=2,<3",
    "click>=8.0,<9",
    "rich>=13,<15",
    "requests>=2.31,<3",
    "beautifulsoup4>=4.12,<5",
    "rapidfuzz>=3.0,<4",
    "reportlab>=4.0,<5",
    "feedparser>=6.0,<7",
    "python-dateutil>=2.8,<3",
    "jinja2>=3.1,<4",
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
ui = ["streamlit>=1.28"]
ollama = ["httpx>=0.25"]
markitdown = ["markitdown>=0.1.5"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pip-tools>=7.4",
]
full = ["streamlit>=1.28", "httpx>=0.25", "markitdown>=0.1.5"]

[project.scripts]
job-agent = "job_agent.cli.main:app"
job-agent-web = "job_agent.ui.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["job_agent*"]

[tool.setuptools.package-data]
"job_agent.ui" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Use a project-local basetemp: a locked/corrupted %TEMP%\pytest-of-* dir on Windows
# otherwise throws PermissionErrors and silently under-reports coverage.
addopts = "--basetemp=.pytest_tmp/bt"

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = false
# Vendored fallback shims (used only when the real package is absent) are
# third-party code, not ours to type-check.
exclude = '^src/(click/|job_agent/_vendor/)'
