[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "free-job-agent"
version = "0.3.0"
description = "France/Paris data-AI focused local job-search and application assistant"
requires-python = ">=3.11"
dependencies = [
    # Upper bounds keep builds reproducible and stop a vulnerable/breaking major
    # from being pulled silently. pydantic is pinned to v2 (code imports pydantic.v1).
    "pydantic>=2,<3",
    "click>=8.0,<9",
    "rich>=13,<15",
    "requests>=2.31,<3",
    "beautifulsoup4>=4.12,<5",
    "rapidfuzz>=3.0,<4",
    "reportlab>=4.0,<5",
    "feedparser>=6.0,<7",
    # Entity-expansion-safe XML parsing for untrusted RSS/Atom feed bytes.
    "defusedxml>=0.7,<1",
    "python-dateutil>=2.8,<3",
    "jinja2>=3.1,<4",
    "openpyxl>=3.1,<4",
]

[project.optional-dependencies]
ui = ["streamlit>=1.28"]
ollama = ["httpx>=0.25"]
onnx = ["onnxruntime>=1.20"]
markitdown = ["markitdown>=0.1.5"]
# Optional intake/apply backends (free, open-source; core never requires them)
crawl = ["crawl4ai>=0.6,<1"]
scraping = ["scrapling>=0.2,<1"]
browseruse = ["browser-use>=0.4,<1"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-rerunfailures>=14",
    "ruff>=0.6",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pip-tools>=7.4",
]
e2e = [
    # Playwright + pytest plugin for end-to-end dashboard tests.
    # Install browsers separately: playwright install chromium
    "playwright>=1.40,<2",
    "pytest-playwright>=0.4",
]
full = ["streamlit>=1.28", "httpx>=0.25", "markitdown>=0.1.5"]

[project.scripts]
job-agent = "job_agent.cli.main:app"
job-agent-web = "job_agent.ui.server:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["job_agent*"]

[tool.setuptools.package-data]
"job_agent" = ["data/*.json"]
"job_agent.ui" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# No pinned basetemp: the old project-local .pytest_tmp/bt became an undeletable
# OneDrive reparse point with broken ACLs and failed every bare `pytest -q` run.
# tests/conftest.py redirects the temp root only when the system default is actually
# inaccessible, which was the original reason for pinning; system temp is the default.

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# BLE001 (blind-except) is intentionally NOT globally selected: the codebase has
# ~183 pre-existing broad-except BOUNDARIES that are deliberately catch-log-continue
# (intake feeds, optional-import fallbacks, diagnostic traces — all reviewed in the
# 2026-07 silent-except triage). Enabling it globally would turn CI red on reviewed
# code. Instead BLE is enforced on the CLEAN safety paths via dedicated
# `ruff check --select BLE` invocations (pre-commit `ble-safety` hook + the CI
# "Ruff (safety paths)" step), so a NEW blind except on those paths fails the gate.
# The auto_apply/* burn-down (29 reviewed boundaries → narrow-or-justify) is tracked
# in docs/new/WORKLOG.md rather than silently ignored (G-8).

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = false
# Vendored fallback shims (used only when the real package is absent) are
# third-party code, not ours to type-check.
exclude = '^src/(click/|job_agent/_vendor/)'
